Update media query

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
             </div>
             <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja bem-vindo(a). Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                <div id="instrucao">
+                    <h1>Login</h1>
+                    <p>Seja bem-vindo(a). Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                </div>
                 <form action="login.php" method="post">
 
                 </form>
